--- a/grub.cfg
+++ b/grub.cfg
@@ -1,7 +1,7 @@
 menuentry 'Scuffed InitRD' {
-    set root='cd,gpt3'
+    set root='cd0,gpt3'
     echo    'Loading Linux linux ...'
-    linux   /vmlinuz-linux loglevel=7 rootfstype=tmpfs rdinit=/init
+    linux   /vmlinuz loglevel=7 rootfstype=tmpfs rdinit=/init
     echo    'Loading initial ramdisk ...'
     initrd  /initramfs.cpio.zst
 }
